@@ -1,3 +1,11 @@
+Sat Dec 20 20:47:25 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bsecxxsmart.h: Added size_type typedef and size() function to our
+	Sequence template (like in std::vector).
+
+	* bseprocidl.cc: Support for properties (although without grouping).
+	Reenable (most) signals.
+
 Wed Dec 17 23:54:22 2003  Tim Janik  <timj@gtk.org>
 
 	* bsecategories.c (bse_category_from_id): set the icon to NULL instead
